Fixed Kaufman section. Triangle behind text

--- a/blocks/kaufman/__triangle/kaufman__triangle.css
+++ b/blocks/kaufman/__triangle/kaufman__triangle.css
@@ -7,4 +7,5 @@
     background-size: 877px 877px;
     background-image: url('../../../images/kaufman-triangle.svg');
     background-repeat: no-repeat;
+    z-index: -1;
   }
