--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -4,5 +4,6 @@
     padding: 90px 0;
     background-color: #1f1f1f;
     overflow: hidden;
+    z-index: 1;
   }
   
