--- a/blocks/table/_theme/table_theme_dark.css
+++ b/blocks/table/_theme/table_theme_dark.css
@@ -1,4 +1,3 @@
 .table_theme_dark {
     background-color: transparent;
-    z-index: 1;
-  }
+}
